<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    tools:context=".ui.event.EventFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chat_constraintLayout_id"
        android:layout_width="360dp"
        android:layout_height="591dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:background="@drawable/chat_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026">


        <TextView
            android:id="@+id/event_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="17dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/event_name"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/music_event_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/event_type_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/event_type"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/music_event_id" />

        <TextView
            android:id="@+id/music_event_id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginEnd="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/chat_background"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:text="@string/music_event"
            app:layout_constraintBottom_toTopOf="@+id/event_type_id"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_name_id" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="19dp"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:layout_marginBottom="363dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_type_id">

            <TextView
                android:id="@+id/txt_public_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_grey_bg"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/public_txt"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/txt_private_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_primary_bg"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/private_txt"
                android:textColor="#ffffff" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/add_cmt_bg_id"
        android:layout_width="376dp"
        android:layout_height="55dp"
        android:background="@drawable/send_msg_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_constraintLayout_id"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:layout_width="306dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/save"
                android:textColor="#ffffff"
                android:textSize="15sp"

                />
        </LinearLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>